<resources>
    <string name="app_name">GoBike !</string>
    <!--Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>

    <string name="nav_label_map">Carte</string>
    <string name="nav_label_setting_map">Paramètres</string>
    <string name="nav_label_account">Mon compte</string>

    <string name="nav_section_aboutus">A propos</string>
    <string name="nav_label_cgu">CGU</string>
    <string name="nav_label_rgpd">RGPD</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Se connecter</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Le mot de passe doit contenir au moins un chiffre et 6 caractères !</string>
    <string name="error_date_after_now">La date de naissance ne peut pas être supérieure à la date du jour !</string>
    <string name="login_error_incorrect_username">Compte utilisateur inexistant !</string>
    <string name="login_error_incorrect_password">Mot de passe incorrecte !</string>
    <string name="error_field_required">Le champ est requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--Setting-->
    <string name="map_setting_filter">Filtre</string>
    <string name="map_setting_filter_description">Filtrer les points à afficher sur la carte</string>
    <string name="map_setting_key_isJCDecauxLoadingEnable">isJCDecauxLoadingEnable</string>
    <string name="map_setting_key_isCarParkingNamurLoadingEnable">isCarParkingNamurLoadingEnable</string>
    <string name="map_setting_key_isBikeParkingNamurLoadingEnable">isBikeParkingNamurLoadingEnable</string>
    <string name="map_setting_key_isBikeRouteLoadingEnable">isBikeRouteLoadingEnable</string>
    <string name="map_setting_CarParking_label">Parking voitures</string>
    <string name="map_setting_BikeParking_label">Parking vélos</string>
    <string name="map_setting_BikeRoute_label">Itinéraires vélo</string>
    <string name="map_setting_jcdecaux_label">Libiavélo</string>
    <!--Error page-->
    <string name="error_internet_connection">Internet connection required !</string>
    <string name="error_refresh_button_label">Rafraichir</string>
    <string name="error_duplicate_username">Nom d\'utilisateur déjà existant</string>
    <string name="error_duplicate_email">Email déjà utilisée</string>
    <string name="login_email_label">Email</string>
    <string name="login_password_label">Mot de passe</string>
    <string name="login_button_label">Se connecter</string>
    <string name="login_description_label">Connectez-vous à l\'application afin d\'utiliser toutes les fonctionnalités offertes</string>
    <string name="register_button">S\'inscrire</string>
    <string name="label_logout">Se déconnecter</string>
    <string name="label_login_button_register">S\'inscrire</string>
    <string name="prompt_username">Nom d\'utilisateur</string>
    <string name="prompt_birthdate">Date de naissance</string>
    <string name="prompt_firstname">Prénom</string>
    <string name="prompt_lastname">Nom</string>
    <string name="prompt_gender">Genre</string>
    <string name="date_format_error">Format de date non valide !</string>
    <string name="button_label_servicefull">En voir plus</string>
    <string name="opnion_author_label">Auteur :</string>
    <string name="service_disponibilite_label">DIsponibilités :</string>
    <string name="photo_empty_label">Pas de photos disponibles pour ce service !</string>
    <string name="opinion_empty_label">Pas de commentaires disponibles pour ce service !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_button_label">Y aller !</string>
</resources>
