<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_label_map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_label_setting_map" />
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Favoris" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/nav_label_account" />-->
    </group>

    <item android:title="@string/nav_section_aboutus">
        <menu>
            <item
                android:id="@+id/nav_authors"
                android:title="Auteurs" />
            <item
                android:id="@+id/nav_cgu"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_label_cgu" />
            <item
                android:id="@+id/nav_rgpd"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_label_rgpd" />
        </menu>
    </item>

</menu>
